WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189617
Legend doesn't mask the fieldset's border correctly when it has negative left margin
https://bugs.webkit.org/show_bug.cgi?id=189617
Summary
Legend doesn't mask the fieldset's border correctly when it has negative left...
Simon Pieters (:zcorpan)
Reported
2018-09-14 05:05:39 PDT
See test in
https://github.com/web-platform-tests/wpt/pull/13004
This passes in Chrome, Firefox, Edge.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-06 13:50:00 PDT
<
rdar://problem/174185071
>
Ahmad Saleem
Comment 2
2026-04-06 13:51:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62145
EWS
Comment 3
2026-05-25 19:45:58 PDT
Committed
313863@main
(4fc65915b5cf): <
https://commits.webkit.org/313863@main
> Reviewed commits have been landed. Closing PR #62145 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug