Fieldset border painted behind legend when legend overlaps non-block-start border via negative margin https://bugs.webkit.org/show_bug.cgi?id=189617 rdar://174185071

Reviewed by Alan Baradlay.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Per spec [1], the fieldset border should not be painted behind the rendered
legend. When the CSS block-start border is zero (e.g. border:none;
border-left:100px solid red), paintRectToClipOutFromBorder() produced an
empty clip rect since it used borderBefore as the clip extent. This meant
a legend overlapping a non-block-start border via negative margin did not
clip that border.

When borderBefore is zero, use the legend's layout box (mapped into
paint-relative coordinates) as the clip rect instead. This only activates
when there is no block-start border, so normal fieldsets with a block-start
border gap are completely unaffected.

[1] https://html.spec.whatwg.org/multipage/rendering.html#the-fieldset-and-legend-elements

* LayoutTests/TestExpectations: Progression
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintRectToClipOutFromBorder):

Canonical link: https://commits.webkit.org/313863@main